...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/google_login_button"
            android:text="@string/sign_in_with_google_hebrew"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/facebook_login_button"
...

            <TextView
                android:id="@+id/sign_in_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sign_in_link"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/already_a_user"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
...
